[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.11.1"
thiserror = "1.0.32"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
arrayref = "0.3.6"

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.11.1"
solana-sdk = "=1.11.1"
solana-validator = "=1.11.1"
solana-logger = "=1.11.1"

[lib]
crate-type = ["cdylib", "lib"]
